<resources>
    <string name="app_name">Fanfare Playbook</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="select_your_seat">Select Your Seat</string>
    <string name="leader_board">Leaderboard</string>
    <string name="tutorial">Tutorial</string>
    <string-array name="sections_array">
        <item>No section selected</item>
        <item>Section 1</item>
        <item>Section 2</item>
        <item>Section 3</item>
        <item>Section 4</item>
    </string-array>

    <string name="incompatible_device">Incompatible Device</string>
    <string name="web_view_not_installed">
        This app won\'t work because your device doesn\'t have Android System WebView installed.
    </string>
    <string name="update_web_view">Update Android System WebView</string>
    <string name="web_view_needs_update">
        This app won\'t work unless you update Android System WebView.
    </string>

    <string name="prediction_tutorial_para_1">Play this game between half innings.</string>
    <string name="prediction_tutorial_para_2">
        Drag your baseballs to the field to predict the plays that will happen next half-inning.
    </string>
    <string name="prediction_tutorial_para_3">
        Tap the payouts tab to see how many points each area pays out per ball.
    </string>
    <string name="prediction_tutorial_para_4">
        Once the inning starts, you have 10 seconds to place your final balls.
    </string>

    <string name="collection_tutorial_para_1">
        Use this screen between plays. After every play you\'ll get a card.
    </string>
    <string name="collection_tutorial_para_2">
        Drag cards down to collect them. If your cards match your goal, tap the notification
        bar to select them, then tap the star to score.
    </string>
    <string name="collection_tutorial_para_3">
        Once per inning, you can change goals by tapping the trophy.
    </string>
    <string name="collection_tutorial_para_4">
        You can hold 5 cards, so drag cards you don\'t want up to discard them.
    </string>

    <string name="onboarding_step_1_three_minigames">
        <b>FANFARE</b> includes 3 minigames you can play at different times in-stadium:
    </string>
    <string name="onboarding_step_1_prediction">
        <b>PREDICTION</b> is a guessing game for use between innings
    </string>
    <string name="onboarding_step_1_collection">
        <b>COLLECTION</b> is a card collecting game for use during the inning
    </string>
    <string name="onboarding_step_1_hotcold">
        <b>CONNECT THE DOTS</b> is an event the announcer will run once per game
    </string>

    <string name="onboarding_step_2_para_1">
        Swap between the minigames any time by tapping the button in the corner to see
        the sidebar menu.
    </string>
    <string name="onboarding_step_2_para_2">
        The Leaderboard shows how your score compares to the top 10.
    </string>
    <string name="onboarding_step_2_para_3">
        You can see goals you’ve earned here any time.
    </string>
    <string name="onboarding_step_2_para_4">
        Done!
    </string>
</resources>
