<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:id="@+id/onboarding_drawer_preview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/onboardingParagraphStyle"
            android:id="@+id/onboarding_step_2_para_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_step_2_para_1" />

        <TextView
            style="@style/onboardingParagraphStyle"
            android:id="@+id/onboarding_step_2_para_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_step_2_para_2" />

        <TextView
            style="@style/onboardingParagraphStyle"
            android:id="@+id/onboarding_step_2_para_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_step_2_para_3" />

        <TextView
            style="@style/onboardingParagraphStyle"
            android:id="@+id/onboarding_step_2_para_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_step_2_para_4"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>